<resources>
    <string name="app_name">CommentScreen</string>
    <string name="tv_title">निर्माण अर्थपूर्ण तरीके जनित हमारी कुशलता स्थापित अनुवाद एछित जाने दर्शाता</string>
    <string name="shikha_gupta">- Shikha Gupta</string>
    <string name="comments">Comments</string>
    <string name="et_hint">यहाँ लिखें ...</string>
    <string name="backbutton">backButton</string>
    <string name="userimage">userImage</string>
    <string name="playicon">playIcon</string>
    <string name="onlyme_icon">onlyMe_icon</string>
    <string name="title">अपने बनाए गए वीडियो को शीर्षक दें:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imgcolose">Imgcolose</string>
    <string name="tv_sms">आपका वीडियो हमने मॉडरेशन के \n लिए भेज दिए हैं, हम आपसे sms के \n द्वारा जल्द संपर्क करेंगे</string>
    <string name="thikhai">ठीक है</string>
    <string name="thanku">धन्यवाद !</string>
    <string name="userprofile">userProfile</string>
    <string name="txt_title">निर्माण अर्थपूर्ण तरीके \n जनित हमारी कुशलता \n स्थापित...</string>
    <string name="tv_time">2 hrs ago</string>
    <string name="tv_otp">कृपया आपके मोबाइल पर भेजे गए \n वेरिफिकेशन कोड दर्ज करें</string>
    <string name="tv_content">इस वीडियो में दी गई सभी जानकारी, घटनास्थल और घटना का समय सही और तथ्यपूर्ण है तथा घटना का वीडियो मेरे क्षेत्र का है! अगर खबर में कोई जानकारी/ बात झूठी या प्रोपोगेंडा के तहत पाई जाती है तो इसके लिए मैं ही ज़िम्मेदार होऊँगा!</string>
    <string name="tv_agree">मैं सहमत हूँ</string>
    <string name="tv_disagree">वापस जाएँ</string>
</resources>
