<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingBottom="16dp"
    android:background="@drawable/dialog_bg"
    tools:context=".MyDialogFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_content"
        android:textColor="#000000"
        android:textSize="14sp"
        android:lineSpacingExtra="8dp"
        android:gravity="center_horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:background="#E1E1E1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_agree"
        android:textColor="#d71920"
        android:textSize="14sp"
        android:gravity="center_horizontal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:background="#E1E1E1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_disagree"
        android:textColor="#000000"
        android:textSize="14sp"
        android:gravity="center_horizontal"/>

</LinearLayout>