<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ThankuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/thanku"
            android:textSize="24sp"
            android:textColor="#d71920"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:text="@string/tv_sms"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:gravity="center"
            android:lineSpacingExtra="6sp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/thikhai"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:background="@drawable/color_border"
            android:layout_marginTop="70dp"/>

    </LinearLayout>

</RelativeLayout>