<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="220dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/sk"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"/>

        <ImageView
            android:id="@+id/imgView_play"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/play"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"/>

    </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_italic"
        android:text="@string/tv_time"
        android:textColor="#737373"
        android:textSize="12sp"
        android:textStyle="italic"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/txt_title"
        android:textColor="#000"
        android:textSize="12sp"
        android:textStyle="bold" />

</LinearLayout>