<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="horizontal"
    android:padding="14dp"
    android:layout_marginBottom="10dp">

    <RelativeLayout
        android:layout_width="80dp"
        android:layout_height="140dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/sk"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"/>

        <ImageView
            android:id="@+id/imgView_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/play"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/tv_title"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:fontFamily="@font/noto_sans"
                android:text="@string/shikha_gupta"
                android:textColor="#737373"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/noto_sans_italic"
                android:text="2 hrs ago"
                android:textColor="#737373"
                android:textSize="14sp"
                android:textStyle="italic" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>